# ibkrkit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
src/ibkrkit/: __init__.py  ibkr_data_store.py  ibkr_data_stream.py  ibkr_logger.py  ibkr_option_chain.py  ibkr_strategy.py  ibkr_utils.py  ibkr_webapp.py  log.py
src/ibkrkit/templates/: index.html  new_index.html
