[build-system]
requires = ["setuptools>=62.6"]
build-backend = "setuptools.build_meta"

[project]
name = "ibkrkit"
version = "0.0.1"
authors = [
  { name="Jack Rochester", email="rochester.jack@proton.me" },
]
description = "A python library for building trading bots using ib_async."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aeventkit==2.1.0",
    "ib_async==2.0.1",
    "nest-asyncio==1.6.0",
    "numpy==2.3.3",
    "pandas==2.3.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "six==1.17.0",
    "tzdata==2025.2",
]